--- a/src/main/resources/config/mail.properties
+++ b/src/main/resources/config/mail.properties
@@ -5,7 +5,7 @@ mail.smtp.port=465
 mail.smtp.auth=true
 mail.smtp.signature=\u8F66\u91D1\u878D
 mail.smtp.username=username
-mail.smtp.password=pass
+mail.smtp.password=123456
 mail.session.debug=false
 mail.password.encrypted=false
 ##########[email start]###################
